--- a/nacos/pom.xml
+++ b/nacos/pom.xml
@@ -5,9 +5,10 @@
 	<parent>
 		<groupId>com.weicoder</groupId>
 		<artifactId>weicoder</artifactId>
-		<version>3.3.1</version>
+		<version>3.3.2${suffix}</version>
 	</parent>
-	<artifactId>nacos${suffix}</artifactId>
+	<artifactId>nacos</artifactId>
+	
 
 	<dependencies>
 		<dependency>
@@ -19,10 +20,9 @@
 	<profiles>
 		<profile>
 			<id>opt</id>
-			
-			<properties>
-				<suffix>-opt</suffix>
-			</properties>
+			<activation>
+				<activeByDefault>true</activeByDefault>
+			</activation>
 			<dependencies>
 				<dependency>
 					<groupId>com.weicoder.extend</groupId>
@@ -32,12 +32,6 @@
 		</profile>
 		<profile>
 			<id>native</id>
-			<activation>
-				<activeByDefault>true</activeByDefault>
-			</activation>
-			<properties>
-				<suffix></suffix>
-			</properties>
 			<dependencies>
 				<dependency>
 					<groupId>com.alibaba.nacos</groupId>
@@ -46,16 +40,15 @@
 				</dependency>
 			</dependencies>
 		</profile>
-		<!-- 
 		<profile>
 			<id>jdk11</id>
-			<properties>
-				<suffix>-jdk11</suffix>
-			</properties>
 			<dependencies>
-
+				<dependency>
+					<groupId>com.weicoder.fork</groupId>
+					<artifactId>nacos-client-jdk11</artifactId>
+					<version>${nacos-client}</version>
+				</dependency>
 			</dependencies>
 		</profile>
-		 -->
 	</profiles>
 </project>
