--- a/admin/pom.xml
+++ b/admin/pom.xml
@@ -3,10 +3,11 @@
 	<parent>
 		<groupId>com.weicoder</groupId>
 		<artifactId>weicoder</artifactId>
-		<version>3.3.1</version> 
+		<version>3.3.2${suffix}</version> 
 	</parent>
 	<modelVersion>4.0.0</modelVersion> 
 	<artifactId>admin</artifactId>
+	
   
 	<dependencies>
 		<dependency>
