--- a/common/pom.xml
+++ b/common/pom.xml
@@ -4,8 +4,9 @@
 	<parent>
 		<groupId>com.weicoder</groupId>
 		<artifactId>weicoder</artifactId> 
-		<version>3.3.1</version>
+		<version>3.3.2${suffix}</version>
 	</parent> 
 	<modelVersion>4.0.0</modelVersion>
 	<artifactId>common</artifactId> 
+	
 </project>
