--- a/elasticsearch/pom.xml
+++ b/elasticsearch/pom.xml
@@ -5,9 +5,10 @@
 	<parent>
 		<groupId>com.weicoder</groupId>
 		<artifactId>weicoder</artifactId>
-		<version>3.3.1</version>
+		<version>3.3.2${suffix}</version>
 	</parent>
-	<artifactId>elasticsearch${suffix}</artifactId>
+	<artifactId>elasticsearch</artifactId>
+	
 
 	<dependencies>
 		<dependency>
@@ -18,11 +19,10 @@
 
 	<profiles>
 		<profile>
-			<id>opt</id>
-			
-			<properties>
-				<suffix>-opt</suffix>
-			</properties>
+			<id>opt</id> 
+			<activation>
+				<activeByDefault>true</activeByDefault>
+			</activation>
 			<dependencies>
 				<dependency>
 					<groupId>com.weicoder.extend</groupId>
@@ -31,13 +31,7 @@
 			</dependencies>
 		</profile>
 		<profile>
-			<id>native</id>
-			<activation>
-				<activeByDefault>true</activeByDefault>
-			</activation>
-			<properties>
-				<suffix></suffix>
-			</properties>
+			<id>native</id>  
 			<dependencies>
 				<dependency>
 					<groupId>org.elasticsearch.client</groupId>
@@ -47,10 +41,7 @@
 			</dependencies>
 		</profile>
 		<profile>
-			<id>jdk11</id>
-			<properties>
-				<suffix>-jdk11</suffix>
-			</properties>
+			<id>jdk11</id> 
 			<dependencies>
 				<dependency>
 					<groupId>com.weicoder.fork</groupId>
