--- a/excel/pom.xml
+++ b/excel/pom.xml
@@ -4,10 +4,11 @@
 	<parent>
 		<groupId>com.weicoder</groupId>
 		<artifactId>weicoder</artifactId>
-		<version>3.3.1</version>
+		<version>3.3.2${suffix}</version>
 	</parent>
 	<modelVersion>4.0.0</modelVersion>
-	<artifactId>excel${suffix}</artifactId>
+	<artifactId>excel</artifactId>
+	
 
 	<dependencies>
 		<dependency>
@@ -19,9 +20,9 @@
 	<profiles>
 		<profile>
 			<id>opt</id> 
-			<properties>
-				<suffix>-opt</suffix>
-			</properties>
+			<activation>
+				<activeByDefault>true</activeByDefault>
+			</activation>
 			<dependencies>
 				<dependency>
 					<groupId>com.weicoder.extend</groupId>
@@ -30,13 +31,7 @@
 			</dependencies>
 		</profile>
 		<profile>
-			<id>native</id>
-			<activation>
-				<activeByDefault>true</activeByDefault>
-			</activation>
-			<properties>
-				<suffix></suffix>
-			</properties>
+			<id>native</id> 
 			<dependencies>
 				<dependency>
 					<groupId>org.apache.poi</groupId>
@@ -51,10 +46,7 @@
 			</dependencies>
 		</profile>
 		<profile>
-			<id>jdk11</id>
-			<properties>
-				<suffix>-jdk11</suffix>
-			</properties>
+			<id>jdk11</id> 
 			<dependencies>
 				<dependency>
 					<groupId>com.weicoder.fork</groupId>
