--- a/hibernate/pom.xml
+++ b/hibernate/pom.xml
@@ -5,9 +5,10 @@
 	<parent>
 		<groupId>com.weicoder</groupId>
 		<artifactId>weicoder</artifactId>
-		<version>3.3.1</version>
+		<version>3.3.2${suffix}</version>
 	</parent>
-	<artifactId>hibernate${suffix}</artifactId>
+	<artifactId>hibernate</artifactId>
+	
 
 	<dependencies>
 		<dependency>
@@ -22,11 +23,10 @@
 
 	<profiles>
 		<profile>
-			<id>opt</id>
-			
-			<properties>
-				<suffix>-opt</suffix>
-			</properties>
+			<id>opt</id> 
+			<activation>
+				<activeByDefault>true</activeByDefault>
+			</activation>
 			<dependencies>
 				<dependency>
 					<groupId>com.weicoder.extend</groupId>
@@ -35,13 +35,7 @@
 			</dependencies>
 		</profile>
 		<profile>
-			<id>native</id>
-			<activation>
-				<activeByDefault>true</activeByDefault>
-			</activation>
-			<properties>
-				<suffix></suffix>
-			</properties>
+			<id>native</id> 
 			<dependencies>
 				<dependency>
 					<groupId>org.hibernate</groupId>
@@ -55,16 +49,15 @@
 				</dependency>
 			</dependencies>
 		</profile>
-		<!-- 
 		<profile>
-			<id>jdk11</id>
-			<properties>
-				<suffix>-jdk11</suffix>
-			</properties>
+			<id>jdk11</id> 
 			<dependencies>
-
+				<dependency>
+					<groupId>org.hibernate</groupId>
+					<artifactId>hibernate-jdk11</artifactId>
+					<version>${hibernate-core}</version>
+				</dependency>
 			</dependencies>
 		</profile>
-		 -->
 	</profiles>
 </project>
