--- a/http4/pom.xml
+++ b/http4/pom.xml
@@ -5,9 +5,10 @@
 	<parent>
 		<groupId>com.weicoder</groupId>
 		<artifactId>weicoder</artifactId>
-		<version>3.3.1</version>
+		<version>3.3.2${suffix}</version> 
 	</parent>
-	<artifactId>http4${suffix}</artifactId>
+	<artifactId>http4</artifactId>
+	
 
 	<dependencies>
 		<dependency>
@@ -18,13 +19,10 @@
 
 	<profiles>
 		<profile>
-			<id>opt</id>
+			<id>opt</id> 
 			<activation>
 				<activeByDefault>true</activeByDefault>
 			</activation>
-			<properties>
-				<suffix>-opt</suffix>
-			</properties>
 			<dependencies>
 				<dependency>
 					<groupId>com.weicoder.extend</groupId>
@@ -33,10 +31,7 @@
 			</dependencies>
 		</profile>
 		<profile>
-			<id>native</id>
-			<properties>
-				<suffix></suffix>
-			</properties>
+			<id>native</id> 
 			<dependencies>
 				<dependency>
 					<groupId>org.apache.httpcomponents</groupId>
@@ -66,10 +61,7 @@
 			</dependencies>
 		</profile>
 		<profile>
-			<id>jdk11</id>
-			<properties>
-				<suffix>-jdk11</suffix>
-			</properties>
+			<id>jdk11</id> 
 			<dependencies>
 				<dependency>
 					<groupId>com.weicoder.fork</groupId>
