--- a/kafka/pom.xml
+++ b/kafka/pom.xml
@@ -4,10 +4,11 @@
 	<parent>
 		<groupId>com.weicoder</groupId>
 		<artifactId>weicoder</artifactId>
-		<version>3.3.1</version>
+		<version>3.3.2${suffix}</version>
 	</parent>
 	<modelVersion>4.0.0</modelVersion>
-	<artifactId>kafka${suffix}</artifactId>
+	<artifactId>kafka</artifactId>
+	
 
 	<dependencies>
 		<dependency>
@@ -27,10 +28,9 @@
 	<profiles>
 		<profile>
 			<id>opt</id>
-
-			<properties>
-				<suffix>-ext</suffix>
-			</properties>
+			<activation>
+				<activeByDefault>true</activeByDefault>
+			</activation>
 			<dependencies>
 				<dependency>
 					<groupId>com.weicoder.extend</groupId>
@@ -40,12 +40,6 @@
 		</profile>
 		<profile>
 			<id>native</id>
-			<activation>
-				<activeByDefault>true</activeByDefault>
-			</activation>
-			<properties>
-				<suffix></suffix>
-			</properties>
 			<dependencies>
 				<dependency>
 					<groupId>org.apache.kafka</groupId>
@@ -56,9 +50,6 @@
 		</profile>
 		<profile>
 			<id>jdk11</id>
-			<properties>
-				<suffix>-jdk11</suffix>
-			</properties>
 			<dependencies>
 				<dependency>
 					<groupId>com.weicoder.fork</groupId>
