--- a/mongo/pom.xml
+++ b/mongo/pom.xml
@@ -4,10 +4,11 @@
 	<parent>
 		<groupId>com.weicoder</groupId>
 		<artifactId>weicoder</artifactId>
-		<version>3.3.1</version>
+		<version>3.3.2${suffix}</version>
 	</parent>
 	<modelVersion>4.0.0</modelVersion>
-	<artifactId>mongo${suffix}</artifactId>
+	<artifactId>mongo</artifactId>
+	
 
 	<dependencies>
 		<dependency>
@@ -19,10 +20,9 @@
 	<profiles>
 		<profile>
 			<id>opt</id>
-
-			<properties>
-				<suffix>-opt</suffix>
-			</properties>
+			<activation>
+				<activeByDefault>true</activeByDefault>
+			</activation>
 			<dependencies>
 				<dependency>
 					<groupId>com.weicoder.extend</groupId>
@@ -32,12 +32,6 @@
 		</profile>
 		<profile>
 			<id>native</id>
-			<activation>
-				<activeByDefault>true</activeByDefault>
-			</activation>
-			<properties>
-				<suffix></suffix>
-			</properties>
 			<dependencies>
 				<dependency>
 					<groupId>org.mongodb</groupId>
@@ -48,9 +42,6 @@
 		</profile>
 		<profile>
 			<id>jdk11</id>
-			<properties>
-				<suffix>-jdk11</suffix>
-			</properties>
 			<dependencies>
 				<dependency>
 					<groupId>org.mongodb</groupId>
