--- a/pay/pom.xml
+++ b/pay/pom.xml
@@ -4,10 +4,11 @@
 	<parent>
 		<groupId>com.weicoder</groupId>
 		<artifactId>weicoder</artifactId>
-		<version>3.3.1</version> 
+		<version>3.3.2${suffix}</version> 
 	</parent>
 	<modelVersion>4.0.0</modelVersion>
 	<artifactId>pay</artifactId>
+	
 
 	<dependencies>
 		<dependency>
