--- a/redis/pom.xml
+++ b/redis/pom.xml
@@ -4,10 +4,11 @@
 	<parent>
 		<groupId>com.weicoder</groupId>
 		<artifactId>weicoder</artifactId>
-		<version>3.3.1</version>
+		<version>3.3.2${suffix}</version>
 	</parent>
 	<modelVersion>4.0.0</modelVersion>
-	<artifactId>redis${suffix}</artifactId>
+	<artifactId>redis</artifactId>
+	
 
 	<dependencies>
 		<dependency>
@@ -30,13 +31,10 @@
 
 	<profiles>
 		<profile>
-			<id>opt</id>
+			<id>opt</id> 
 			<activation>
 				<activeByDefault>true</activeByDefault>
 			</activation>
-			<properties>
-				<suffix>-opt</suffix>
-			</properties>
 			<dependencies>
 				<dependency>
 					<groupId>com.weicoder.extend</groupId>
@@ -45,10 +43,7 @@
 			</dependencies>
 		</profile>
 		<profile>
-			<id>native</id> 
-			<properties>
-				<suffix></suffix>
-			</properties>
+			<id>native</id>  
 			<dependencies>
 				<dependency>
 					<groupId>redis.clients</groupId>
@@ -58,10 +53,7 @@
 			</dependencies>
 		</profile>
 		<profile>
-			<id>jdk11</id>
-			<properties>
-				<suffix>-jdk11</suffix>
-			</properties>
+			<id>jdk11</id> 
 			<dependencies>
 				<dependency>
 					<groupId>redis.clients</groupId>
