--- a/socket/pom.xml
+++ b/socket/pom.xml
@@ -4,10 +4,11 @@
 	<parent>
 		<groupId>com.weicoder</groupId>
 		<artifactId>weicoder</artifactId>
-		<version>3.3.1</version>
+		<version>3.3.2${suffix}</version>
 	</parent>
 	<modelVersion>4.0.0</modelVersion>
-	<artifactId>socket${suffix}</artifactId>
+	<artifactId>socket</artifactId>
+	
 
 	<dependencies>
 		<dependency>
@@ -26,11 +27,10 @@
 
 	<profiles>
 		<profile>
-			<id>opt</id>
-			
-			<properties>
-				<suffix>-opt</suffix>
-			</properties>
+			<id>opt</id> 
+			<activation>
+				<activeByDefault>true</activeByDefault>
+			</activation>
 			<dependencies>
 				<dependency>
 					<groupId>com.weicoder.extend</groupId>
@@ -39,13 +39,7 @@
 			</dependencies>
 		</profile>
 		<profile>
-			<id>native</id>
-			<activation>
-				<activeByDefault>true</activeByDefault>
-			</activation>
-			<properties>
-				<suffix></suffix>
-			</properties>
+			<id>native</id> 
 			<dependencies>
 				<dependency>
 					<groupId>io.netty</groupId>
@@ -54,16 +48,15 @@
 				</dependency>
 			</dependencies>
 		</profile>
-		<!-- 
 		<profile>
-			<id>jdk11</id>
-			<properties>
-				<suffix>-jdk11</suffix>
-			</properties>
+			<id>jdk11</id> 
 			<dependencies>
-
+				<dependency>
+					<groupId>com.weicoder.fork</groupId>
+					<artifactId>netty-all-jdk11</artifactId>
+					<version>${netty-all}</version>
+				</dependency>
 			</dependencies>
 		</profile>
-		 -->
 	</profiles>
 </project>
