--- a/common/pom.xml
+++ b/common/pom.xml
@@ -4,8 +4,8 @@
 	<parent>
 		<groupId>com.weicoder</groupId>
 		<artifactId>weicoder</artifactId> 
-		<version>3.3.2${suffix}</version>
-	</parent> 
+		<version>3.3.2</version>
+	</parent>
 	<modelVersion>4.0.0</modelVersion>
 	<artifactId>common</artifactId> 
 	
