--- a/socket/pom.xml
+++ b/socket/pom.xml
@@ -4,7 +4,7 @@
 	<parent>
 		<groupId>com.weicoder</groupId>
 		<artifactId>weicoder</artifactId>
-		<version>3.3.2${suffix}</version>
+		<version>3.3.2</version>
 	</parent>
 	<modelVersion>4.0.0</modelVersion>
 	<artifactId>socket</artifactId>
