--- a/pom.xml
+++ b/pom.xml
@@ -5,16 +5,16 @@
 	<parent>
 		<groupId>com.weicoder</groupId>
 		<artifactId>build</artifactId>
-		<version>1.2</version>
-	</parent> 
+		<version>1.3</version>
+	</parent>
 	<artifactId>weicoder</artifactId>
-	<version>3.3.2</version>
+	<version>3.3.3</version>
 	<packaging>pom</packaging>
 
 	<properties>
-		<parent>3.3.2</parent>
-		<extend>3.3.6</extend>
+		<extend>3.3.7</extend>
 		<lombok>1.18.12</lombok>
+		<jetty-maven-plugin>9.4.27.v20200227</jetty-maven-plugin>
 		<log4j-core>2.13.1</log4j-core>
 		<fastjson>1.2.66</fastjson>
 		<hibernate-core>5.4.12.Final</hibernate-core>
@@ -24,12 +24,13 @@
 		<jedis>3.2.0</jedis>
 		<kafka-clients>2.4.1</kafka-clients>
 		<sofa-rpc>5.6.5</sofa-rpc>
-		<tomcat-embed>9.0.31</tomcat-embed>
+		<tomcat-embed>9.0.33</tomcat-embed>
 		<guava>28.2-jre</guava>
 		<elasticsearch>7.6.1</elasticsearch>
 		<poi>4.1.2</poi>
 		<nacos-client>1.2.0</nacos-client>
 		<protobuf-java>3.11.4</protobuf-java>
+		<curator-framework>4.3.0</curator-framework>
 		<HikariCP>3.4.2</HikariCP>
 		<solr-solrj>8.4.1</solr-solrj>
 		<httpclient5>5.0</httpclient5>
@@ -76,7 +77,27 @@
 		<module>web</module>
 		<module>websocket</module>
 		<module>xml</module>
+		<module>zookeeper</module>
 	</modules>
+
+	<build>
+		<plugins>
+			<plugin>
+				<groupId>org.eclipse.jetty</groupId>
+				<artifactId>jetty-maven-plugin</artifactId>
+				<version>${jetty-maven-plugin}</version>
+				<configuration>
+					<scanIntervalSeconds>1</scanIntervalSeconds>
+					<httpConnector>
+						<port>80</port>
+					</httpConnector>
+					<webAppConfig>
+						<contextPath>/</contextPath>
+					</webAppConfig>
+				</configuration>
+			</plugin>
+		</plugins>
+	</build>
 
 	<profiles>
 		<profile>
@@ -113,154 +134,160 @@
 		</profile>
 	</profiles>
 
+	<dependencies>
+		<dependency>
+			<groupId>javax</groupId>
+			<artifactId>javaee-api</artifactId>
+			<scope>provided</scope>
+		</dependency>
+	</dependencies>
+
 	<dependencyManagement>
 		<dependencies>
 			<dependency>
 				<groupId>com.weicoder</groupId>
 				<artifactId>admin</artifactId>
-				<version>${parent}</version>
+				<version>${project.version}</version>
 			</dependency>
 			<dependency>
 				<groupId>com.weicoder</groupId>
 				<artifactId>common</artifactId>
-				<version>${parent}</version>
+				<version>${project.version}</version>
 			</dependency>
 			<dependency>
 				<groupId>com.weicoder</groupId>
 				<artifactId>cache</artifactId>
-				<version>${parent}</version>
+				<version>${project.version}</version>
 			</dependency>
 			<dependency>
 				<groupId>com.weicoder</groupId>
 				<artifactId>dao</artifactId>
-				<version>${parent}</version>
+				<version>${project.version}</version>
 			</dependency>
 			<dependency>
 				<groupId>com.weicoder</groupId>
 				<artifactId>elasticsearch</artifactId>
-				<version>${parent}</version>
+				<version>${project.version}</version>
 			</dependency>
 			<dependency>
 				<groupId>com.weicoder</groupId>
 				<artifactId>email</artifactId>
-				<version>${parent}</version>
+				<version>${project.version}</version>
 			</dependency>
 			<dependency>
 				<groupId>com.weicoder</groupId>
 				<artifactId>excel</artifactId>
-				<version>${parent}</version>
+				<version>${project.version}</version>
 			</dependency>
 			<dependency>
 				<groupId>com.weicoder</groupId>
 				<artifactId>hibernate</artifactId>
-				<version>${parent}</version>
+				<version>${project.version}</version>
 			</dependency>
 			<dependency>
 				<groupId>com.weicoder</groupId>
 				<artifactId>http</artifactId>
-				<version>${parent}</version>
+				<version>${project.version}</version>
 			</dependency>
 			<dependency>
 				<groupId>com.weicoder</groupId>
 				<artifactId>http4</artifactId>
-				<version>${parent}</version>
+				<version>${project.version}</version>
 			</dependency>
 			<dependency>
 				<groupId>com.weicoder</groupId>
 				<artifactId>json</artifactId>
-				<version>${parent}</version>
+				<version>${project.version}</version>
 			</dependency>
 			<dependency>
 				<groupId>com.weicoder</groupId>
 				<artifactId>kafka</artifactId>
-				<version>${parent}</version>
+				<version>${project.version}</version>
 			</dependency>
 			<dependency>
 				<groupId>com.weicoder</groupId>
 				<artifactId>log</artifactId>
-				<version>${parent}</version>
+				<version>${project.version}</version>
 			</dependency>
 			<dependency>
 				<groupId>com.weicoder</groupId>
 				<artifactId>memcache</artifactId>
-				<version>${parent}</version>
+				<version>${project.version}</version>
 			</dependency>
 			<dependency>
 				<groupId>com.weicoder</groupId>
 				<artifactId>mongo</artifactId>
-				<version>${parent}</version>
+				<version>${project.version}</version>
 			</dependency>
 			<dependency>
 				<groupId>com.weicoder</groupId>
 				<artifactId>nacos</artifactId>
-				<version>${parent}</version>
+				<version>${project.version}</version>
 			</dependency>
 			<dependency>
 				<groupId>com.weicoder</groupId>
 				<artifactId>oauth</artifactId>
-				<version>${parent}</version>
+				<version>${project.version}</version>
 			</dependency>
 			<dependency>
 				<groupId>com.weicoder</groupId>
 				<artifactId>pay</artifactId>
-				<version>${parent}</version>
+				<version>${project.version}</version>
 			</dependency>
 			<dependency>
 				<groupId>com.weicoder</groupId>
 				<artifactId>protobuf</artifactId>
-				<version>${parent}</version>
+				<version>${project.version}</version>
 			</dependency>
 			<dependency>
 				<groupId>com.weicoder</groupId>
 				<artifactId>quartz</artifactId>
-				<version>${parent}</version>
+				<version>${project.version}</version>
 			</dependency>
 			<dependency>
 				<groupId>com.weicoder</groupId>
 				<artifactId>redis</artifactId>
-				<version>${parent}</version>
+				<version>${project.version}</version>
 			</dependency>
 			<dependency>
 				<groupId>com.weicoder</groupId>
 				<artifactId>rpc</artifactId>
-				<version>${parent}</version>
+				<version>${project.version}</version>
 			</dependency>
 			<dependency>
 				<groupId>com.weicoder</groupId>
 				<artifactId>socket</artifactId>
-				<version>${parent}</version>
+				<version>${project.version}</version>
 			</dependency>
 			<dependency>
 				<groupId>com.weicoder</groupId>
 				<artifactId>solr</artifactId>
-				<version>${parent}</version>
+				<version>${project.version}</version>
 			</dependency>
 			<dependency>
 				<groupId>com.weicoder</groupId>
 				<artifactId>tomcat</artifactId>
-				<version>${parent}</version>
+				<version>${project.version}</version>
 			</dependency>
 			<dependency>
 				<groupId>com.weicoder</groupId>
 				<artifactId>web</artifactId>
-				<version>${parent}</version>
+				<version>${project.version}</version>
 			</dependency>
 			<dependency>
 				<groupId>com.weicoder</groupId>
 				<artifactId>websocket</artifactId>
-				<version>${parent}</version>
+				<version>${project.version}</version>
 			</dependency>
 			<dependency>
 				<groupId>com.weicoder</groupId>
 				<artifactId>xml</artifactId>
-				<version>${parent}</version>
+				<version>${project.version}</version>
 			</dependency>
 			<dependency>
-				<groupId>com.weicoder.extend</groupId>
-				<artifactId>extend</artifactId>
-				<version>${extend}</version>
-				<type>pom</type>
-				<scope>import</scope>
+				<groupId>com.weicoder</groupId>
+				<artifactId>zookeeper</artifactId>
+				<version>${project.version}</version>
 			</dependency>
 			<dependency>
 				<groupId>org.projectlombok</groupId>
