--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
 	<parent>
 		<groupId>com.weicoder</groupId>
 		<artifactId>build</artifactId>
-		<version>1.3</version>
+		<version>1.4</version>
 	</parent>
 	<artifactId>weicoder</artifactId>
 	<version>3.3.5</version>
@@ -13,7 +13,6 @@
 
 	<properties>
 		<extend>3.3.8</extend>
-		<lombok>1.18.12</lombok>
 		<log4j-core>2.13.1</log4j-core>
 		<fastjson>1.2.68</fastjson>
 		<druid>1.1.21</druid>
@@ -22,6 +21,7 @@
 		<hibernate-core>5.4.13.Final</hibernate-core>
 		<mysql-connector-java>8.0.19</mysql-connector-java>
 		<netty-all>4.1.48.Final</netty-all>
+		<netty3>3.10.6.Final</netty3>
 		<mongo-java-driver>3.12.2</mongo-java-driver>
 		<jedis>3.2.0</jedis>
 		<kafka-clients>2.4.1</kafka-clients>
@@ -56,7 +56,6 @@
 	</properties>
 
 	<modules>
-		<module>admin</module>
 		<module>common</module>
 		<module>cache</module>
 		<module>csv</module>
@@ -80,8 +79,6 @@
 		<module>nacos</module>
 		<module>netty</module>
 		<module>netty3</module>
-		<module>oauth</module>
-		<module>pay</module>
 		<module>protobuf</module>
 		<module>quartz</module>
 		<module>redis</module>
@@ -95,7 +92,7 @@
 		<module>zookeeper</module>
 		<module>zip</module>
 	</modules>
- 
+
 	<profiles>
 		<profile>
 			<id>opt</id>
@@ -122,19 +119,425 @@
 			<properties>
 				<suffix></suffix>
 			</properties>
+			<dependencyManagement>
+				<dependencies>
+					<dependency>
+						<groupId>com.google.guava</groupId>
+						<artifactId>guava</artifactId>
+						<version>${guava}</version>
+					</dependency>
+					<dependency>
+						<groupId>com.opencsv</groupId>
+						<artifactId>opencsv</artifactId>
+						<version>${opencsv}</version>
+					</dependency>
+					<dependency>
+						<groupId>com.google.protobuf</groupId>
+						<artifactId>protobuf-java</artifactId>
+						<version>${protobuf-java}</version>
+					</dependency>
+					<dependency>
+						<groupId>io.netty</groupId>
+						<artifactId>netty</artifactId>
+						<version>${netty3}</version>
+					</dependency>
+					<dependency>
+						<groupId>io.netty</groupId>
+						<artifactId>netty-all</artifactId>
+						<version>${netty-all}</version>
+					</dependency>
+					<dependency>
+						<groupId>com.alibaba.nacos</groupId>
+						<artifactId>nacos-client</artifactId>
+						<version>${nacos-client}</version>
+					</dependency>
+					<dependency>
+						<groupId>org.mongodb</groupId>
+						<artifactId>mongo-java-driver</artifactId>
+						<version>${mongo-java-driver}</version>
+					</dependency>
+					<dependency>
+						<groupId>org.apache.mina</groupId>
+						<artifactId>mina-core</artifactId>
+						<version>${mina-core}</version>
+					</dependency>
+					<dependency>
+						<groupId>com.whalin</groupId>
+						<artifactId>Memcached-Java-Client</artifactId>
+						<version>${Memcached-Java-Client}</version>
+					</dependency>
+					<dependency>
+						<groupId>org.apache.logging.log4j</groupId>
+						<artifactId>log4j-core</artifactId>
+						<version>${log4j-core}</version>
+					</dependency>
+					<dependency>
+						<groupId>org.apache.logging.log4j</groupId>
+						<artifactId>log4j-slf4j-impl</artifactId>
+						<version>${log4j-core}</version>
+					</dependency>
+					<dependency>
+						<groupId>com.lmax</groupId>
+						<artifactId>disruptor</artifactId>
+						<version>${disruptor}</version>
+					</dependency>
+					<dependency>
+						<groupId>org.apache.kafka</groupId>
+						<artifactId>kafka-clients</artifactId>
+						<version>${kafka-clients}</version>
+					</dependency>
+					<dependency>
+						<groupId>com.alibaba</groupId>
+						<artifactId>fastjson</artifactId>
+						<version>${fastjson}</version>
+					</dependency>
+					<dependency>
+						<groupId>com.google.code.gson</groupId>
+						<artifactId>gson</artifactId>
+						<version>${gson}</version>
+					</dependency>
+					<dependency>
+						<groupId>org.apache.httpcomponents</groupId>
+						<artifactId>httpclient</artifactId>
+						<version>${httpclient}</version>
+					</dependency>
+					<dependency>
+						<groupId>org.apache.httpcomponents</groupId>
+						<artifactId>httpmime</artifactId>
+						<version>${httpmime}</version>
+					</dependency>
+					<dependency>
+						<groupId>org.apache.httpcomponents</groupId>
+						<artifactId>httpcore</artifactId>
+						<version>${httpcore}</version>
+					</dependency>
+					<dependency>
+						<groupId>org.apache.httpcomponents</groupId>
+						<artifactId>httpcore-nio</artifactId>
+						<version>${httpcore-nio}</version>
+					</dependency>
+					<dependency>
+						<groupId>org.apache.httpcomponents</groupId>
+						<artifactId>httpasyncclient</artifactId>
+						<version>${httpasyncclient}</version>
+					</dependency>
+					<dependency>
+						<groupId>org.apache.httpcomponents.client5</groupId>
+						<artifactId>httpclient5</artifactId>
+						<version>${httpclient5}</version>
+					</dependency>
+					<dependency>
+						<groupId>org.hibernate</groupId>
+						<artifactId>hibernate-core</artifactId>
+						<version>${hibernate-core}</version>
+					</dependency>
+					<dependency>
+						<groupId>org.hibernate</groupId>
+						<artifactId>hibernate-hikaricp</artifactId>
+						<version>${hibernate-core}</version>
+					</dependency>
+					<dependency>
+						<groupId>org.hbase</groupId>
+						<artifactId>asynchbase</artifactId>
+						<version>${asynchbase}</version>
+					</dependency>
+					<dependency>
+						<groupId>org.apache.hbase</groupId>
+						<artifactId>hbase-client</artifactId>
+						<version>${hbase-client}</version>
+					</dependency>
+					<dependency>
+						<groupId>org.apache.poi</groupId>
+						<artifactId>poi</artifactId>
+						<version>${poi}</version>
+					</dependency>
+					<dependency>
+						<groupId>org.apache.poi</groupId>
+						<artifactId>poi-ooxml</artifactId>
+						<version>${poi}</version>
+					</dependency>
+					<dependency>
+						<groupId>org.apache.commons</groupId>
+						<artifactId>commons-email</artifactId>
+						<version>${commons-email}</version>
+					</dependency>
+					<dependency>
+						<groupId>org.elasticsearch.client</groupId>
+						<artifactId>elasticsearch-rest-high-level-client</artifactId>
+						<version>${elasticsearch}</version>
+					</dependency>
+					<dependency>
+						<groupId>com.zaxxer</groupId>
+						<artifactId>HikariCP</artifactId>
+						<version>${HikariCP}</version>
+					</dependency>
+					<dependency>
+						<groupId>com.alibaba</groupId>
+						<artifactId>druid</artifactId>
+						<version>${druid}</version>
+					</dependency>
+					<dependency>
+						<groupId>org.apache.commons</groupId>
+						<artifactId>commons-dbcp2</artifactId>
+						<version>${commons-dbcp2}</version>
+					</dependency>
+					<dependency>
+						<groupId>mysql</groupId>
+						<artifactId>mysql-connector-java</artifactId>
+						<version>${mysql-connector-java}</version>
+					</dependency>
+					<dependency>
+						<groupId>org.quartz-scheduler</groupId>
+						<artifactId>quartz</artifactId>
+						<version>${quartz}</version>
+					</dependency>
+					<dependency>
+						<groupId>redis.clients</groupId>
+						<artifactId>jedis</artifactId>
+						<version>${jedis}</version>
+					</dependency>
+					<dependency>
+						<groupId>com.alipay.sofa</groupId>
+						<artifactId>sofa-rpc-all</artifactId>
+						<version>${sofa-rpc}</version>
+					</dependency> 
+					<dependency>
+						<groupId>org.apache.solr</groupId>
+						<artifactId>solr-solrj</artifactId>
+						<version>${solr-solrj}</version>
+					</dependency>
+					<dependency>
+						<groupId>org.apache.tomcat.embed</groupId>
+						<artifactId>tomcat-embed-core</artifactId>
+						<version>${tomcat-embed}</version>
+					</dependency>
+					<dependency>
+						<groupId>org.apache.tomcat.embed</groupId>
+						<artifactId>tomcat-embed-jasper</artifactId>
+						<version>${tomcat-embed}</version>
+					</dependency>
+					<dependency>
+						<groupId>org.dom4j</groupId>
+						<artifactId>dom4j</artifactId>
+						<version>${dom4j}</version>
+					</dependency>
+					<dependency>
+						<groupId>org.jdom</groupId>
+						<artifactId>jdom2</artifactId>
+						<version>${jdom2}</version>
+					</dependency>
+					<dependency>
+						<groupId>com.thoughtworks.xstream</groupId>
+						<artifactId>xstream</artifactId>
+						<version>${xstream}</version>
+					</dependency>
+					<dependency>
+						<groupId>org.apache.commons</groupId>
+						<artifactId>commons-compress</artifactId>
+						<version>${commons-compress}</version>
+					</dependency>
+					<dependency>
+						<groupId>org.apache.curator</groupId>
+						<artifactId>curator-framework</artifactId>
+						<version>${curator-framework}</version>
+					</dependency>
+					<dependency>
+						<groupId>org.apache.curator</groupId>
+						<artifactId>curator-recipes</artifactId>
+						<version>${curator-framework}</version>
+					</dependency>
+				</dependencies>
+			</dependencyManagement>
 		</profile>
 		<profile>
 			<id>jdk11</id>
 			<properties>
 				<suffix>-jdk11</suffix>
 			</properties>
-		</profile>
-		<profile>
-			<id>jdk8</id>
-			<properties>
-				<suffix>-jdk8</suffix>
-				<jdk>1.8</jdk>
-			</properties>
+			<dependencyManagement>
+				<dependencies>
+					<dependency>
+						<groupId>com.weicoder.fork</groupId>
+						<artifactId>guava-jdk11</artifactId>
+						<version>${guava}</version>
+					</dependency>
+					<dependency>
+						<groupId>com.weicoder.fork</groupId>
+						<artifactId>opencsv-jdk11</artifactId>
+						<version>${opencsv}</version>
+					</dependency>
+					<dependency>
+						<groupId>com.weicoder.fork</groupId>
+						<artifactId>protobuf-java-jdk11</artifactId>
+						<version>${protobuf-java}</version>
+					</dependency>
+					<dependency>
+						<groupId>com.weicoder.fork</groupId>
+						<artifactId>netty3-jdk11</artifactId>
+						<version>${netty3}</version>
+					</dependency>
+					<dependency>
+						<groupId>com.weicoder.fork</groupId>
+						<artifactId>netty-all-jdk11</artifactId>
+						<version>${netty-all}</version>
+					</dependency>
+					<dependency>
+						<groupId>com.weicoder.fork</groupId>
+						<artifactId>nacos-client-jdk11</artifactId>
+						<version>${nacos-client}</version>
+					</dependency>
+					<dependency>
+						<groupId>com.weicoder.fork</groupId>
+						<artifactId>mongo-java-driver-jdk11</artifactId>
+						<version>${mongo-java-driver}</version>
+					</dependency>
+					<dependency>
+						<groupId>com.weicoder.fork</groupId>
+						<artifactId>mina-jdk11</artifactId>
+						<version>${mina-core}</version>
+					</dependency>
+					<dependency>
+						<groupId>com.weicoder.fork</groupId>
+						<artifactId>Memcached-Java-Client-jdk11</artifactId>
+						<version>${Memcached-Java-Client}</version>
+					</dependency>
+					<dependency>
+						<groupId>com.weicoder.fork</groupId>
+						<artifactId>log4j-jdk11</artifactId>
+						<version>${log4j-core}</version>
+					</dependency>
+					<dependency>
+						<groupId>com.weicoder.fork</groupId>
+						<artifactId>disruptor-jdk11</artifactId>
+						<version>${disruptor}</version>
+					</dependency>
+					<dependency>
+						<groupId>com.weicoder.fork</groupId>
+						<artifactId>kafka-clients-jdk11</artifactId>
+						<version>${kafka-clients}</version>
+					</dependency>
+					<dependency>
+						<groupId>com.weicoder.fork</groupId>
+						<artifactId>fastjson-jdk11</artifactId>
+						<version>${fastjson}</version>
+					</dependency>
+					<dependency>
+						<groupId>com.weicoder.fork</groupId>
+						<artifactId>gson-jdk11</artifactId>
+						<version>${gson}</version>
+					</dependency>
+					<dependency>
+						<groupId>com.weicoder.fork</groupId>
+						<artifactId>httpclient4-jdk11</artifactId>
+						<version>${httpclient}</version>
+					</dependency>
+					<dependency>
+						<groupId>com.weicoder.fork</groupId>
+						<artifactId>httpclient5-jdk11</artifactId>
+						<version>${httpclient5}</version>
+					</dependency>
+					<dependency>
+						<groupId>com.weicoder.fork</groupId>
+						<artifactId>hibernate-jdk11</artifactId>
+						<version>${hibernate-core}</version>
+					</dependency>
+					<dependency>
+						<groupId>com.weicoder.fork</groupId>
+						<artifactId>asynchbase-jdk11</artifactId>
+						<version>${asynchbase}</version>
+					</dependency>
+					<dependency>
+						<groupId>com.weicoder.fork</groupId>
+						<artifactId>hbase-client-jdk11</artifactId>
+						<version>${hbase-client}</version>
+					</dependency>
+					<dependency>
+						<groupId>com.weicoder.fork</groupId>
+						<artifactId>poi</artifactId>
+						<version>${poi}</version>
+					</dependency>
+					<dependency>
+						<groupId>com.weicoder.fork</groupId>
+						<artifactId>commons-email-jdk11</artifactId>
+						<version>${commons-email}</version>
+					</dependency>
+					<dependency>
+						<groupId>com.weicoder.fork</groupId>
+						<artifactId>elasticsearch-client-jdk11</artifactId>
+						<version>${elasticsearch}</version>
+					</dependency>
+					<dependency>
+						<groupId>com.weicoder.fork</groupId>
+						<artifactId>HikariCP-jdk11</artifactId>
+						<version>${HikariCP}</version>
+					</dependency>
+					<dependency>
+						<groupId>com.weicoder.fork</groupId>
+						<artifactId>druid-jdk11</artifactId>
+						<version>${druid}</version>
+					</dependency>
+					<dependency>
+						<groupId>com.weicoder.fork</groupId>
+						<artifactId>dbcp2-jdk11</artifactId>
+						<version>${commons-dbcp2}</version>
+					</dependency>
+					<dependency>
+						<groupId>com.weicoder.fork</groupId>
+						<artifactId>mysql-connector-java-jdk11</artifactId>
+						<version>${mysql-connector-java}</version>
+					</dependency>
+					<dependency>
+						<groupId>com.weicoder.fork</groupId>
+						<artifactId>quartz-jdk11</artifactId>
+						<version>${quartz}</version>
+					</dependency>
+					<dependency>
+						<groupId>com.weicoder.fork</groupId>
+						<artifactId>jedis-jdk11</artifactId>
+						<version>${jedis}</version>
+					</dependency>
+					<dependency>
+						<groupId>com.weicoder.fork</groupId>
+						<artifactId>sofa-rpc-all-jdk11</artifactId>
+						<version>${sofa-rpc}</version>
+					</dependency> 
+					<dependency>
+						<groupId>com.weicoder.fork</groupId>
+						<artifactId>solr-solrj-jdk11</artifactId>
+						<version>${solr-solrj}</version>
+					</dependency>
+					<dependency>
+						<groupId>com.weicoder.fork</groupId>
+						<artifactId>tomcat-embed-jdk11</artifactId>
+						<version>${tomcat-embed}</version>
+					</dependency>
+					<dependency>
+						<groupId>com.weicoder.fork</groupId>
+						<artifactId>dom4j-jdk11</artifactId>
+						<version>${dom4j}</version>
+					</dependency>
+					<dependency>
+						<groupId>com.weicoder.fork</groupId>
+						<artifactId>jdom2-jdk11</artifactId>
+						<version>${jdom2}</version>
+					</dependency>
+					<dependency>
+						<groupId>com.weicoder.fork</groupId>
+						<artifactId>xstream-jdk11</artifactId>
+						<version>${xstream}</version>
+					</dependency>
+					<dependency>
+						<groupId>com.weicoder.fork</groupId>
+						<artifactId>commons-compress-jdk11</artifactId>
+						<version>${commons-compress}</version>
+					</dependency>
+					<dependency>
+						<groupId>com.weicoder.fork</groupId>
+						<artifactId>curator-framework-jdk11</artifactId>
+						<version>${curator-framework}</version>
+					</dependency>
+				</dependencies>
+			</dependencyManagement>
 		</profile>
 	</profiles>
 
@@ -148,11 +551,6 @@
 
 	<dependencyManagement>
 		<dependencies>
-			<dependency>
-				<groupId>com.weicoder</groupId>
-				<artifactId>admin</artifactId>
-				<version>${project.version}</version>
-			</dependency>
 			<dependency>
 				<groupId>com.weicoder</groupId>
 				<artifactId>common</artifactId>
@@ -270,16 +668,6 @@
 			</dependency>
 			<dependency>
 				<groupId>com.weicoder</groupId>
-				<artifactId>oauth</artifactId>
-				<version>${project.version}</version>
-			</dependency>
-			<dependency>
-				<groupId>com.weicoder</groupId>
-				<artifactId>pay</artifactId>
-				<version>${project.version}</version>
-			</dependency>
-			<dependency>
-				<groupId>com.weicoder</groupId>
 				<artifactId>protobuf</artifactId>
 				<version>${project.version}</version>
 			</dependency>
@@ -337,11 +725,6 @@
 				<groupId>com.weicoder</groupId>
 				<artifactId>zip</artifactId>
 				<version>${project.version}</version>
-			</dependency>
-			<dependency>
-				<groupId>org.projectlombok</groupId>
-				<artifactId>lombok</artifactId>
-				<version>${lombok}</version>
 			</dependency>
 		</dependencies>
 	</dependencyManagement>
