--- a/druid/pom.xml
+++ b/druid/pom.xml
@@ -1,26 +1,21 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0"
 	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
 		<groupId>com.weicoder</groupId>
 		<artifactId>weicoder</artifactId>
 		<version>3.3.6</version>
 	</parent>
-	<artifactId>rpc</artifactId>
+	<artifactId>druid</artifactId>
 
 	<dependencies>
 		<dependency>
 			<groupId>com.weicoder</groupId>
-			<artifactId>common</artifactId>
-		</dependency>
-		<dependency>
-			<groupId>com.weicoder</groupId>
-			<artifactId>nacos</artifactId>
-			<optional>true</optional>
+			<artifactId>datasource</artifactId>
 		</dependency>
 	</dependencies>
-<!-- 
+
 	<profiles>
 		<profile>
 			<id>opt</id>
@@ -30,7 +25,7 @@
 			<dependencies>
 				<dependency>
 					<groupId>com.weicoder.extend</groupId>
-					<artifactId>rpc-extend</artifactId>
+					<artifactId>druid-extend</artifactId>
 				</dependency>
 			</dependencies>
 		</profile>
@@ -38,11 +33,10 @@
 			<id>release</id>
 			<dependencies>
 				<dependency>
-					<groupId>com.alipay.sofa</groupId>
-					<artifactId>sofa-rpc-all</artifactId>
+					<groupId>com.alibaba</groupId>
+					<artifactId>druid</artifactId>
 				</dependency>
 			</dependencies>
-		</profile> 
+		</profile>
 	</profiles>
-	 -->
 </project>
