--- a/httpclient5/pom.xml
+++ b/httpclient5/pom.xml
@@ -7,7 +7,7 @@
 		<version>3.3.6</version>
 	</parent>
 	<modelVersion>4.0.0</modelVersion>
-	<artifactId>http</artifactId>
+	<artifactId>httpclient5</artifactId>
 
 	<dependencies>
 		<dependency>
