--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,7 @@
 		<version>1.4</version>
 	</parent>
 	<artifactId>weicoder</artifactId>
-	<version>3.3.6</version>
+	<version>3.3.7</version>
 	<packaging>pom</packaging>
 
 	<properties>
@@ -42,6 +42,9 @@
 		<quartz>2.3.2</quartz>
 		<opencsv>5.1</opencsv>
 		<mina-core>2.1.3</mina-core>
+		<lettuce-core>5.2.2.RELEASE</lettuce-core>
+		<redisson>3.12.5</redisson>
+		<yaml>1.26</yaml>
 		<disruptor>3.4.2</disruptor>
 		<druid>1.1.22</druid>
 		<netty3>3.10.6.Final</netty3>
@@ -82,6 +85,8 @@
 		<module>protobuf</module>
 		<module>quartz</module>
 		<module>redis</module>
+		<module>lettuce</module>
+		<module>redisson</module>
 		<module>rpc</module>
 		<module>socket</module>
 		<module>sofa</module>
@@ -90,6 +95,7 @@
 		<module>web</module>
 		<module>websocket</module>
 		<module>xml</module>
+		<module>yaml</module>
 		<module>zookeeper</module>
 		<module>zip</module>
 	</modules>
@@ -102,13 +108,6 @@
 			</activation>
 			<dependencyManagement>
 				<dependencies>
-					<dependency>
-						<groupId>com.weicoder.extend</groupId>
-						<artifactId>extend</artifactId>
-						<version>${extend}</version>
-						<type>pom</type>
-						<scope>import</scope>
-					</dependency>
 				</dependencies>
 			</dependencyManagement>
 		</profile>
@@ -116,231 +115,6 @@
 			<id>release</id>
 			<dependencyManagement>
 				<dependencies>
-					<dependency>
-						<groupId>com.google.guava</groupId>
-						<artifactId>guava</artifactId>
-						<version>${guava}</version>
-					</dependency>
-					<dependency>
-						<groupId>com.opencsv</groupId>
-						<artifactId>opencsv</artifactId>
-						<version>${opencsv}</version>
-					</dependency>
-					<dependency>
-						<groupId>com.google.protobuf</groupId>
-						<artifactId>protobuf-java</artifactId>
-						<version>${protobuf-java}</version>
-					</dependency>
-					<dependency>
-						<groupId>io.netty</groupId>
-						<artifactId>netty</artifactId>
-						<version>${netty3}</version>
-					</dependency>
-					<dependency>
-						<groupId>io.netty</groupId>
-						<artifactId>netty-all</artifactId>
-						<version>${netty-all}</version>
-					</dependency>
-					<dependency>
-						<groupId>com.alibaba.nacos</groupId>
-						<artifactId>nacos-client</artifactId>
-						<version>${nacos-client}</version>
-					</dependency>
-					<dependency>
-						<groupId>org.mongodb</groupId>
-						<artifactId>mongo-java-driver</artifactId>
-						<version>${mongo-java-driver}</version>
-					</dependency>
-					<dependency>
-						<groupId>org.apache.mina</groupId>
-						<artifactId>mina-core</artifactId>
-						<version>${mina-core}</version>
-					</dependency>
-					<dependency>
-						<groupId>com.whalin</groupId>
-						<artifactId>Memcached-Java-Client</artifactId>
-						<version>${Memcached-Java-Client}</version>
-					</dependency>
-					<dependency>
-						<groupId>org.apache.logging.log4j</groupId>
-						<artifactId>log4j-core</artifactId>
-						<version>${log4j-core}</version>
-					</dependency>
-					<dependency>
-						<groupId>org.apache.logging.log4j</groupId>
-						<artifactId>log4j-slf4j-impl</artifactId>
-						<version>${log4j-core}</version>
-					</dependency>
-					<dependency>
-						<groupId>com.lmax</groupId>
-						<artifactId>disruptor</artifactId>
-						<version>${disruptor}</version>
-					</dependency>
-					<dependency>
-						<groupId>org.apache.kafka</groupId>
-						<artifactId>kafka-clients</artifactId>
-						<version>${kafka-clients}</version>
-					</dependency>
-					<dependency>
-						<groupId>com.alibaba</groupId>
-						<artifactId>fastjson</artifactId>
-						<version>${fastjson}</version>
-					</dependency>
-					<dependency>
-						<groupId>com.google.code.gson</groupId>
-						<artifactId>gson</artifactId>
-						<version>${gson}</version>
-					</dependency>
-					<dependency>
-						<groupId>org.apache.httpcomponents</groupId>
-						<artifactId>httpclient</artifactId>
-						<version>${httpclient}</version>
-					</dependency>
-					<dependency>
-						<groupId>org.apache.httpcomponents</groupId>
-						<artifactId>httpmime</artifactId>
-						<version>${httpclient}</version>
-					</dependency>
-					<dependency>
-						<groupId>org.apache.httpcomponents</groupId>
-						<artifactId>httpcore</artifactId>
-						<version>${httpcore}</version>
-					</dependency>
-					<dependency>
-						<groupId>org.apache.httpcomponents</groupId>
-						<artifactId>httpcore-nio</artifactId>
-						<version>${httpcore}</version>
-					</dependency>
-					<dependency>
-						<groupId>org.apache.httpcomponents</groupId>
-						<artifactId>httpasyncclient</artifactId>
-						<version>${httpasyncclient}</version>
-					</dependency>
-					<dependency>
-						<groupId>org.apache.httpcomponents.client5</groupId>
-						<artifactId>httpclient5</artifactId>
-						<version>${httpclient5}</version>
-					</dependency>
-					<dependency>
-						<groupId>org.hibernate</groupId>
-						<artifactId>hibernate-core</artifactId>
-						<version>${hibernate-core}</version>
-					</dependency>
-					<dependency>
-						<groupId>org.hibernate</groupId>
-						<artifactId>hibernate-hikaricp</artifactId>
-						<version>${hibernate-core}</version>
-					</dependency>
-					<dependency>
-						<groupId>org.hbase</groupId>
-						<artifactId>asynchbase</artifactId>
-						<version>${asynchbase}</version>
-					</dependency>
-					<dependency>
-						<groupId>org.apache.hbase</groupId>
-						<artifactId>hbase-client</artifactId>
-						<version>${hbase-client}</version>
-					</dependency>
-					<dependency>
-						<groupId>org.apache.poi</groupId>
-						<artifactId>poi</artifactId>
-						<version>${poi}</version>
-					</dependency>
-					<dependency>
-						<groupId>org.apache.poi</groupId>
-						<artifactId>poi-ooxml</artifactId>
-						<version>${poi}</version>
-					</dependency>
-					<dependency>
-						<groupId>org.apache.commons</groupId>
-						<artifactId>commons-email</artifactId>
-						<version>${commons-email}</version>
-					</dependency>
-					<dependency>
-						<groupId>org.elasticsearch.client</groupId>
-						<artifactId>elasticsearch-rest-high-level-client</artifactId>
-						<version>${elasticsearch}</version>
-					</dependency>
-					<dependency>
-						<groupId>com.zaxxer</groupId>
-						<artifactId>HikariCP</artifactId>
-						<version>${HikariCP}</version>
-					</dependency>
-					<dependency>
-						<groupId>com.alibaba</groupId>
-						<artifactId>druid</artifactId>
-						<version>${druid}</version>
-					</dependency>
-					<dependency>
-						<groupId>org.apache.commons</groupId>
-						<artifactId>commons-dbcp2</artifactId>
-						<version>${commons-dbcp2}</version>
-					</dependency>
-					<dependency>
-						<groupId>mysql</groupId>
-						<artifactId>mysql-connector-java</artifactId>
-						<version>${mysql-connector-java}</version>
-					</dependency>
-					<dependency>
-						<groupId>org.quartz-scheduler</groupId>
-						<artifactId>quartz</artifactId>
-						<version>${quartz}</version>
-					</dependency>
-					<dependency>
-						<groupId>redis.clients</groupId>
-						<artifactId>jedis</artifactId>
-						<version>${jedis}</version>
-					</dependency>
-					<dependency>
-						<groupId>com.alipay.sofa</groupId>
-						<artifactId>sofa-rpc-all</artifactId>
-						<version>${sofa-rpc}</version>
-					</dependency>
-					<dependency>
-						<groupId>org.apache.solr</groupId>
-						<artifactId>solr-solrj</artifactId>
-						<version>${solr-solrj}</version>
-					</dependency>
-					<dependency>
-						<groupId>org.apache.tomcat.embed</groupId>
-						<artifactId>tomcat-embed-core</artifactId>
-						<version>${tomcat-embed}</version>
-					</dependency>
-					<dependency>
-						<groupId>org.apache.tomcat.embed</groupId>
-						<artifactId>tomcat-embed-jasper</artifactId>
-						<version>${tomcat-embed}</version>
-					</dependency>
-					<dependency>
-						<groupId>org.dom4j</groupId>
-						<artifactId>dom4j</artifactId>
-						<version>${dom4j}</version>
-					</dependency>
-					<dependency>
-						<groupId>org.jdom</groupId>
-						<artifactId>jdom2</artifactId>
-						<version>${jdom2}</version>
-					</dependency>
-					<dependency>
-						<groupId>com.thoughtworks.xstream</groupId>
-						<artifactId>xstream</artifactId>
-						<version>${xstream}</version>
-					</dependency>
-					<dependency>
-						<groupId>org.apache.commons</groupId>
-						<artifactId>commons-compress</artifactId>
-						<version>${commons-compress}</version>
-					</dependency>
-					<dependency>
-						<groupId>org.apache.curator</groupId>
-						<artifactId>curator-framework</artifactId>
-						<version>${curator-framework}</version>
-					</dependency>
-					<dependency>
-						<groupId>org.apache.curator</groupId>
-						<artifactId>curator-recipes</artifactId>
-						<version>${curator-framework}</version>
-					</dependency>
 				</dependencies>
 			</dependencyManagement>
 		</profile>
@@ -498,6 +272,16 @@
 			</dependency>
 			<dependency>
 				<groupId>com.weicoder</groupId>
+				<artifactId>lettuce</artifactId>
+				<version>${project.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>com.weicoder</groupId>
+				<artifactId>redisson</artifactId>
+				<version>${project.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>com.weicoder</groupId>
 				<artifactId>rpc</artifactId>
 				<version>${project.version}</version>
 			</dependency>
@@ -538,6 +322,11 @@
 			</dependency>
 			<dependency>
 				<groupId>com.weicoder</groupId>
+				<artifactId>yaml</artifactId>
+				<version>${project.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>com.weicoder</groupId>
 				<artifactId>zookeeper</artifactId>
 				<version>${project.version}</version>
 			</dependency>
@@ -545,6 +334,253 @@
 				<groupId>com.weicoder</groupId>
 				<artifactId>zip</artifactId>
 				<version>${project.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>com.weicoder.extend</groupId>
+				<artifactId>extend</artifactId>
+				<version>${extend}</version>
+				<type>pom</type>
+				<scope>import</scope>
+			</dependency>
+			<dependency>
+				<groupId>com.google.guava</groupId>
+				<artifactId>guava</artifactId>
+				<version>${guava}</version>
+			</dependency>
+			<dependency>
+				<groupId>com.opencsv</groupId>
+				<artifactId>opencsv</artifactId>
+				<version>${opencsv}</version>
+			</dependency>
+			<dependency>
+				<groupId>com.google.protobuf</groupId>
+				<artifactId>protobuf-java</artifactId>
+				<version>${protobuf-java}</version>
+			</dependency>
+			<dependency>
+				<groupId>io.netty</groupId>
+				<artifactId>netty</artifactId>
+				<version>${netty3}</version>
+			</dependency>
+			<dependency>
+				<groupId>io.netty</groupId>
+				<artifactId>netty-all</artifactId>
+				<version>${netty-all}</version>
+			</dependency>
+			<dependency>
+				<groupId>com.alibaba.nacos</groupId>
+				<artifactId>nacos-client</artifactId>
+				<version>${nacos-client}</version>
+			</dependency>
+			<dependency>
+				<groupId>org.mongodb</groupId>
+				<artifactId>mongo-java-driver</artifactId>
+				<version>${mongo-java-driver}</version>
+			</dependency>
+			<dependency>
+				<groupId>io.lettuce</groupId>
+				<artifactId>lettuce-core</artifactId>
+				<version>${lettuce-core}</version>
+			</dependency>
+			<dependency>
+				<groupId>org.redisson</groupId>
+				<artifactId>redisson</artifactId>
+				<version>${redisson}</version>
+			</dependency>
+			<dependency>
+				<groupId>org.apache.mina</groupId>
+				<artifactId>mina-core</artifactId>
+				<version>${mina-core}</version>
+			</dependency>
+			<dependency>
+				<groupId>com.whalin</groupId>
+				<artifactId>Memcached-Java-Client</artifactId>
+				<version>${Memcached-Java-Client}</version>
+			</dependency>
+			<dependency>
+				<groupId>org.apache.logging.log4j</groupId>
+				<artifactId>log4j-core</artifactId>
+				<version>${log4j-core}</version>
+			</dependency>
+			<dependency>
+				<groupId>org.apache.logging.log4j</groupId>
+				<artifactId>log4j-slf4j-impl</artifactId>
+				<version>${log4j-core}</version>
+			</dependency>
+			<dependency>
+				<groupId>com.lmax</groupId>
+				<artifactId>disruptor</artifactId>
+				<version>${disruptor}</version>
+			</dependency>
+			<dependency>
+				<groupId>org.apache.kafka</groupId>
+				<artifactId>kafka-clients</artifactId>
+				<version>${kafka-clients}</version>
+			</dependency>
+			<dependency>
+				<groupId>com.alibaba</groupId>
+				<artifactId>fastjson</artifactId>
+				<version>${fastjson}</version>
+			</dependency>
+			<dependency>
+				<groupId>com.google.code.gson</groupId>
+				<artifactId>gson</artifactId>
+				<version>${gson}</version>
+			</dependency>
+			<dependency>
+				<groupId>org.apache.httpcomponents</groupId>
+				<artifactId>httpclient</artifactId>
+				<version>${httpclient}</version>
+			</dependency>
+			<dependency>
+				<groupId>org.apache.httpcomponents</groupId>
+				<artifactId>httpmime</artifactId>
+				<version>${httpclient}</version>
+			</dependency>
+			<dependency>
+				<groupId>org.apache.httpcomponents</groupId>
+				<artifactId>httpcore</artifactId>
+				<version>${httpcore}</version>
+			</dependency>
+			<dependency>
+				<groupId>org.apache.httpcomponents</groupId>
+				<artifactId>httpcore-nio</artifactId>
+				<version>${httpcore}</version>
+			</dependency>
+			<dependency>
+				<groupId>org.apache.httpcomponents</groupId>
+				<artifactId>httpasyncclient</artifactId>
+				<version>${httpasyncclient}</version>
+			</dependency>
+			<dependency>
+				<groupId>org.apache.httpcomponents.client5</groupId>
+				<artifactId>httpclient5</artifactId>
+				<version>${httpclient5}</version>
+			</dependency>
+			<dependency>
+				<groupId>org.hibernate</groupId>
+				<artifactId>hibernate-core</artifactId>
+				<version>${hibernate-core}</version>
+			</dependency>
+			<dependency>
+				<groupId>org.hibernate</groupId>
+				<artifactId>hibernate-hikaricp</artifactId>
+				<version>${hibernate-core}</version>
+			</dependency>
+			<dependency>
+				<groupId>org.hbase</groupId>
+				<artifactId>asynchbase</artifactId>
+				<version>${asynchbase}</version>
+			</dependency>
+			<dependency>
+				<groupId>org.apache.hbase</groupId>
+				<artifactId>hbase-client</artifactId>
+				<version>${hbase-client}</version>
+			</dependency>
+			<dependency>
+				<groupId>org.apache.poi</groupId>
+				<artifactId>poi</artifactId>
+				<version>${poi}</version>
+			</dependency>
+			<dependency>
+				<groupId>org.apache.poi</groupId>
+				<artifactId>poi-ooxml</artifactId>
+				<version>${poi}</version>
+			</dependency>
+			<dependency>
+				<groupId>org.apache.commons</groupId>
+				<artifactId>commons-email</artifactId>
+				<version>${commons-email}</version>
+			</dependency>
+			<dependency>
+				<groupId>org.elasticsearch.client</groupId>
+				<artifactId>elasticsearch-rest-high-level-client</artifactId>
+				<version>${elasticsearch}</version>
+			</dependency>
+			<dependency>
+				<groupId>com.zaxxer</groupId>
+				<artifactId>HikariCP</artifactId>
+				<version>${HikariCP}</version>
+			</dependency>
+			<dependency>
+				<groupId>com.alibaba</groupId>
+				<artifactId>druid</artifactId>
+				<version>${druid}</version>
+			</dependency>
+			<dependency>
+				<groupId>org.apache.commons</groupId>
+				<artifactId>commons-dbcp2</artifactId>
+				<version>${commons-dbcp2}</version>
+			</dependency>
+			<dependency>
+				<groupId>mysql</groupId>
+				<artifactId>mysql-connector-java</artifactId>
+				<version>${mysql-connector-java}</version>
+			</dependency>
+			<dependency>
+				<groupId>org.quartz-scheduler</groupId>
+				<artifactId>quartz</artifactId>
+				<version>${quartz}</version>
+			</dependency>
+			<dependency>
+				<groupId>redis.clients</groupId>
+				<artifactId>jedis</artifactId>
+				<version>${jedis}</version>
+			</dependency>
+			<dependency>
+				<groupId>com.alipay.sofa</groupId>
+				<artifactId>sofa-rpc-all</artifactId>
+				<version>${sofa-rpc}</version>
+			</dependency>
+			<dependency>
+				<groupId>org.apache.solr</groupId>
+				<artifactId>solr-solrj</artifactId>
+				<version>${solr-solrj}</version>
+			</dependency>
+			<dependency>
+				<groupId>org.apache.tomcat.embed</groupId>
+				<artifactId>tomcat-embed-core</artifactId>
+				<version>${tomcat-embed}</version>
+			</dependency>
+			<dependency>
+				<groupId>org.apache.tomcat.embed</groupId>
+				<artifactId>tomcat-embed-jasper</artifactId>
+				<version>${tomcat-embed}</version>
+			</dependency>
+			<dependency>
+				<groupId>org.dom4j</groupId>
+				<artifactId>dom4j</artifactId>
+				<version>${dom4j}</version>
+			</dependency>
+			<dependency>
+				<groupId>org.jdom</groupId>
+				<artifactId>jdom2</artifactId>
+				<version>${jdom2}</version>
+			</dependency>
+			<dependency>
+				<groupId>com.thoughtworks.xstream</groupId>
+				<artifactId>xstream</artifactId>
+				<version>${xstream}</version>
+			</dependency>
+			<dependency>
+				<groupId>org.yaml</groupId>
+				<artifactId>snakeyaml</artifactId>
+				<version>${yaml}</version>
+			</dependency>
+			<dependency>
+				<groupId>org.apache.commons</groupId>
+				<artifactId>commons-compress</artifactId>
+				<version>${commons-compress}</version>
+			</dependency>
+			<dependency>
+				<groupId>org.apache.curator</groupId>
+				<artifactId>curator-framework</artifactId>
+				<version>${curator-framework}</version>
+			</dependency>
+			<dependency>
+				<groupId>org.apache.curator</groupId>
+				<artifactId>curator-recipes</artifactId>
+				<version>${curator-framework}</version>
 			</dependency>
 		</dependencies>
 	</dependencyManagement>
