--- a/pom.xml
+++ b/pom.xml
@@ -1,7 +1,7 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0"
 	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-	<modelVersion>4.0.0</modelVersion> 
+	<modelVersion>4.0.0</modelVersion>
 	<parent>
 		<groupId>com.weicoder</groupId>
 		<artifactId>build</artifactId>
@@ -9,7 +9,7 @@
 	</parent>
 	<artifactId>weicoder</artifactId>
 	<version>2.5.1</version>
-	<packaging>pom</packaging>     
+	<packaging>pom</packaging>
 
 	<modules>
 		<module>common</module>
@@ -24,7 +24,8 @@
 		<module>websocket</module>
 	</modules>
 
-	<properties>  
+	<properties>
+		<jdk>1.8</jdk>
 		<log4j-core>2.12.1</log4j-core>
 		<disruptor>3.4.2</disruptor>
 		<fastjson>1.2.62</fastjson>
@@ -43,23 +44,26 @@
 		<curator-framework>4.2.0</curator-framework>
 		<kafka-clients>2.3.1</kafka-clients>
 		<guava>28.1-jre</guava>
-		<lettuce-core>5.2.1.RELEASE</lettuce-core>
-		<redisson>3.11.6</redisson>
+		<lettuce-core>5.2.2.RELEASE</lettuce-core>
+		<redisson>3.12.5</redisson>
 		<commons-email>1.5</commons-email>
 		<poi>4.1.1</poi>
 		<jdom2>2.0.6</jdom2>
 		<dom4j>2.1.1</dom4j>
 		<xstream>1.4.11.1</xstream>
 		<Memcached-Java-Client>3.0.2</Memcached-Java-Client>
-	</properties> 
-	      
+	</properties>
+
+	<dependencies>
+		<dependency>
+			<groupId>javax</groupId>
+			<artifactId>javaee-api</artifactId>
+			<scope>provided</scope>
+		</dependency>
+	</dependencies>
+
 	<dependencyManagement>
 		<dependencies>
-			<dependency>
-				<groupId>javax</groupId>
-				<artifactId>javaee-api</artifactId>
-				<version>${javaee-api}</version>
-			</dependency>
 			<dependency>
 				<groupId>com.weicoder</groupId>
 				<artifactId>common</artifactId>
